Adopt Java 17 features to address Sonar issues  - pattern matching instanceof operator  - replace streams collector with Streams.toList()